@@ -1,3 +1,9 @@
+2004-06-13 Serg Stoyan <stoyan255@ukr.net>
+
+	* Library/PCProjectBrowser.m:
+	(reloadLastColumn): Reload subprojects list only if subprojects
+	added/removed.
+	
 2004-06-12 Serg Stoyan <stoyan255@ukr.net>
 
 	* Library/PCProjectManager.m:
